--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         async function fetchData() {
             // IMPORTANT: Replace with your actual SheetDB.io API URL
             // Example: https://sheetdb.io/api/v0/YOUR_SHEET_ID
-            const SHEETDB_API_URL = \'YOUR_SHEETDB_API_URL_HERE\'; 
+            const SHEETDB_API_URL = \'https://sheetdb.io/api/v1/bws5pc8jetcon'; 
 
             try {
                 const response = await fetch(SHEETDB_API_URL);
