--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         // IMPORTANT: REPLACE THIS WITH YOUR ACTUAL SHEETDB.IO API URL
         // Example: const SHEET_API_URL = 'https://sheetdb.io/api/v0/abcdef1234567890';
         // =====================================================================
-        const SHEET_API_URL = 'YOUR_SHEETDB_API_URL_HERE'; 
+        const SHEET_API_URL = 'https://sheetdb.io/api/v1/bws5pc8jetcon'; 
         
         const counterElement = document.getElementById('momentCounter');
         const rippleCenter = document.querySelector('.ripple-center');
