--- a/ripple_animation_with_photos.html
+++ b/ripple_animation_with_photos.html
@@ -238,7 +238,8 @@
         // IMPORTANT: REPLACE THIS WITH YOUR ACTUAL SHEETDB.IO API URL
         // Example: const SHEET_API_URL = 'https://sheetdb.io/api/v0/abcdef1234567890';
         // =====================================================================
-        const SHEET_API_URL = 'YOUR_SHEETDB_API_URL_HERE'; 
+        const SHEET_API_URL = '
+https://sheetdb.io/api/v0/abcdef1234567890'; 
         
         const counterElement = document.getElementById('momentCounter');
         const rippleCenter = document.querySelector('.ripple-center');
