--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         // If you have multiple sheets, list them here.
         // Example: const SHEET_API_URLS = ["https://sheetdb.io/api/v1/bws5pc8jetcon", "https://sheetdb.io/api/v1/zhscigisesf7z"];
         // =====================================================================
-        const SHEET_API_URLS = ["YOUR_MAIN_SHEETDB_API_URL_HERE"]; 
+        const SHEET_API_URLS = ["https://sheetdb.io/api/v1/bws5pc8jetcon","https://sheetdb.io/api/v1/zhscigisesf7z"]; 
         
         const counterElement = document.getElementById("momentCounter");
         const rippleCenter = document.querySelector(".ripple-center");
