--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         // If you have multiple sheets, list them here.
         // Example: const SHEET_API_URLS = ["https://sheetdb.io/api/v0/sheet1_id", "https://sheetdb.io/api/v0/sheet2_id"];
         // =====================================================================
-        const SHEET_API_URLS = ["YOUR_MAIN_SHEETDB_API_URL_HERE"]; 
+        const SHEET_API_URLS = ["https://sheetdb.io/api/v1/zhscigisesf7z", "https://sheetdb.io/api/v1/bws5pc8jetcon"]; 
         
         const counterElement = document.getElementById("momentCounter");
         const rippleCenter = document.querySelector(".ripple-center");
@@ -251,7 +251,7 @@
         // Add all possible column names that contain the "Do you feel appreciated" question or quantity
         const APPRECIATED_COLUMNS = [
             "Do you feel seen, valued and appreciated?", 
-            "If you\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people.",
+            "If you're representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people.",
             "Do you feel appreciated?"
         ];
 
