--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
         // Initialize
         fetchRealTimeData();
         
-        // Update data every 2 minutes (120000 ms)
-        setInterval(fetchRealTimeData, 120000);
+        // Update data every 2 minutes (1800000 ms)
+        setInterval(fetchRealTimeData, 1800000);
         
         // Show new testimonial every 5 seconds (5000 ms)
         setInterval(showFloatingTestimonial, 5000);
