--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         // If you have multiple sheets, list them here.
         // Example: const SHEET_API_URLS = ["https://sheetdb.io/api/v0/sheet1_id", "https://sheetdb.io/api/v0/sheet2_id"];
         // =====================================================================
-        const SHEET_API_URLS = ["https://sheetdb.io/api/v1/zhscigisesf7z","https://sheetdb.io/api/v1/bws5pc8jetcon"]; 
+        const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/2PACX-1vTfLQ_eyJRp-MhCe5O-3wmvxV11pMVjCGT8WoRLDHAdc7e4Wpant9wJuxuOSJkXork3FoX28nMznZho/pub?gid=969890899&single=true&output=csv","https://docs.google.com/spreadsheets/d/e/2PACX-1vQng4QMHPZyNfYQqJIyy1GKxQq118HvC7N3t86YHYCJMfRgq33slQsb6L39sapib9CsxnC2oZW3pRhQ/pub?gid=822836489&single=true&output=csv"]; 
         
         const counterElement = document.getElementById("momentCounter");
         const rippleCenter = document.querySelector(".ripple-center");
