--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
         // Column names that contain numerical values for the count
         // These columns should ONLY contain numbers (e.g., '14', '29')
         const NUMERICAL_COUNT_COLUMNS = [
-            "Total Appreciated Count", // Example: A new column where you pre-calculate 'Yes' + numbers
-            "If you\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people.", "Do you feel appreciated?"
+            "Do you feel appreciated?", // Example: A new column where you pre-calculate 'Yes' + numbers
+            "If you\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people."
         ];
 
         // Function to parse CSV text into an array of objects
