--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
         // Get this from File > Share > Publish to web > CSV
         // Example: const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/YOUR_SHEET_ID/pub?gid=0&single=true&output=csv"];
         // =====================================================================
-        const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/2PACX-1vTfLQ_eyJRp-MhCe5O-3wmvxV11pMVjCGT8WoRLDHAdc7e4Wpant9wJuxuOSJkXork3FoX28nMznZho/pubhtml?gid=969890899&single=true", "https://docs.google.com/spreadsheets/d/e/2PACX-1vQng4QMHPZyNfYQqJIyy1GKxQq118HvC7N3t86YHYCJMfRgq33slQsb6L39sapib9CsxnC2oZW3pRhQ/pubhtml?gid=822836489&single=true"]; 
+        const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/2PACX-1vTfLQ_eyJRp-MhCe5O-3wmvxV11pMVjCGT8WoRLDHAdc7e4Wpant9wJuxuOSJkXork3FoX28nMznZho/pubhtml?gid=969890899&single=true", 
+                                       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQng4QMHPZyNfYQqJIyy1GKxQq118HvC7N3t86YHYCJMfRgq33slQsb6L39sapib9CsxnC2oZW3pRhQ/pubhtml?gid=822836489&single=true"
+                                      ]; 
         
         const counterElement = document.getElementById("momentCounter");
         const rippleCenter = document.querySelector(".ripple-center");
