--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
         // Column names that contain numerical values for the count
         // These columns should ONLY contain numbers (e.g., '14', '29')
         const NUMERICAL_COUNT_COLUMNS = [
-            "Do you feel appreciated?", // Example: A new column where you pre-calculate 'Yes' + numbers
+            "Do you feel appreciated?",
             "If you\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people."
+            "Do you feel appreciated?"
         ];
 
         // Function to parse CSV text into an array of objects
