--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
         // Get this from File > Share > Publish to web > CSV
         // Example: const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/YOUR_SHEET_ID/pub?gid=0&single=true&output=csv"];
         // =====================================================================
-        const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/2PACX-1vTfLQ_eyJRp-MhCe5O-3wmvxV11pMVjCGT8WoRLDHAdc7e4Wpant9wJuxuOSJkXork3FoX28nMznZho/pubhtml?gid=969890899&single=true", 
-                                       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQng4QMHPZyNfYQqJIyy1GKxQq118HvC7N3t86YHYCJMfRgq33slQsb6L39sapib9CsxnC2oZW3pRhQ/pubhtml?gid=822836489&single=true"
+        const GOOGLE_SHEET_CSV_URLS = ["https://docs.google.com/spreadsheets/d/e/2PACX-1vTfLQ_eyJRp-MhCe5O-3wmvxV11pMVjCGT8WoRLDHAdc7e4Wpant9wJuxuOSJkXork3FoX28nMznZho/pubhtml?gid=969890899&single=true&output=csv", 
+                                       "https://docs.google.com/spreadsheets/d/e/2PACX-1vQng4QMHPZyNfYQqJIyy1GKxQq118HvC7N3t86YHYCJMfRgq33slQsb6L39sapib9CsxnC2oZW3pRhQ/pubhtml?gid=822836489&single=truetrue&output=csv"
                                       ]; 
         
         const counterElement = document.getElementById("momentCounter");
@@ -253,8 +253,7 @@
         // These columns should ONLY contain numbers (e.g., '14', '29')
         const NUMERICAL_COUNT_COLUMNS = [
             "Do you feel appreciated?",
-            "If you\\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people."
-            "Do you feel appreciated?"
+            "If you\\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people.",
         ];
 
         // Function to parse CSV text into an array of objects
