--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         // These columns should ONLY contain numbers (e.g., '14', '29')
         const NUMERICAL_COUNT_COLUMNS = [
             "Do you feel appreciated?",
-            "If you\\'re representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people.",
+            "If you're representing a company, how many people in your group feel seen, valued and appreciated? Enter the number of people.",
         ];
 
         // Function to parse CSV text into an array of objects
